Create Booked Page and change in about page

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -88,11 +88,11 @@
 
     <div class="grid  grid-cols-3 h-max -seatac justify-center items-center gap-8">
       <div
-        class="bg-white h-full w-full flex flex-col justify-center items-center text-gray-500 rounded-t-[60px] gap-2 p-10">
-        <img class="h-[56px] w-[56px]" src="/assets/homediveteam.png" alt="">
-        <div class="text-emerald-500 font-seatac font-bold text-[20px] text-center ">MEET THE TEAM</div>
+        class="bg-white h-[100%] w-full flex flex-col justify-center items-center text-gray-500 rounded-t-[60px] gap-2 p-10">
+        <img class="h-[45px] w-[45px]" src="/assets/homediveteam.png" alt="">
+        <div class="text-emerald-600 font-seatac font-bold text-[20px] text-center ">MEET THE TEAM</div>
 
-        <p class="text-center"> From the executive leadership team
+        <p class="text-center text-[14px]"> From the executive leadership team
           to the board of directors, get to
           know the leadership team pioneering
           the way to put the world’s 1.5
@@ -102,30 +102,33 @@
         <button class="setac-primary-button">MEET THE TEAM</button>
       </div>
       <div
-        class="bg-white h-full w-full flex flex-col justify-center items-center text-center text-gray-500 rounded-t-[60px] gap-2 p-10">
-        <img class="h-[56px] w-[56px]" src="/assets/aboutdiveteam.png" alt="">
-        <div class="text-emerald-500 font-seatac font-bold text-[20px] text-center uppercase ">Join the team </div>
-        Recognized as A Great Place to Work®,
+        class="bg-white h-[100%] w-full flex flex-col justify-center items-center text-center text-gray-500 rounded-t-[60px] gap-2 p-10">
+        <img class="h-[45px] w-[45px]" src="/assets/aboutdiveteam.png" alt="">
+        <div class="text-emerald-600 font-seatac font-bold text-[20px] text-center uppercase ">Join the team </div>
+        <p class="text-center text-[14px]">  Recognized as A Great Place to Work®,
         Seatac Rental prides itself on creating
         a supportive,down-to-earth, pioneering,
         and efficient work environment.
-        <BR></BR>
+        <br>
         Review open positions and come join us!
+        </p>
         <button class="setac-primary-button">Join the team
 
         </button>
       </div>
       <div
-        class="bg-white h-full w-full flex flex-col justify-center text-center items-center text-gray-500 rounded-t-[60px] gap-2 p-10">
-        <img class="h-[56px] w-[56px]" src="/assets/aboutdivtouch.png" alt="">
-        <div class="text-emerald-500 font-seatac font-bold text-[20px] text-center uppercase ">
+        class="bg-white h-[100%] w-full flex flex-col justify-center text-center items-center text-gray-500 rounded-t-[60px] gap-2 p-10">
+        <img class="h-[45px] w-[45px]" src="/assets/aboutdivtouch.png" alt="">
+        <div class="text-emerald-600 font-seatac font-bold text-[20px] text-center uppercase ">
           Get in touch
         </div>
+        <p class="text-center text-[14px]"> 
         Reach out to the Seatac Rantal newsdesk
         for press inquiries, the Seatac
         Rental press kit, influencer outreach,
         nvestor relations information, and
         any other corporate inquiries you may have.
+        </p>
         <button class="setac-primary-button"> Get in touch</button>
       </div>
     </div>
@@ -135,15 +138,15 @@
 
   <!-- journey section -->
 
-  <div class="journey h-[85vh] py-32 px-40 flex items-center gap-[50px]">
+  <div class="journey h-[90vh] py-32 px-40 flex items-center gap-[50px] ">
     <div class="journey  w-[65%]">
       <img src="/assets/journeyCar.png" alt="journeycar">
     </div>
     <div class="missiontext flex flex-col w-[35%] justify-center h-full uppercase gap-1.5 ">
       <div class="font-seatac font-normal text-[27px]">Follow </div>
-      <div class="text-emerald-500 font-seatac text-[42px] font-bold leading-[50px]">along on the journey </div>
+      <div class="text-emerald-600 font-seatac text-[42px] font-bold leading-[50px]">along on the journey </div>
       <div>
-        <p class="text-[#696969] lowercase ">
+        <p class="text-[#696969] lowercase  ">
           Cruise the Seatac Rantal blog for drool-worthy
           cars,chronicles of adventures from the road, and
           the latest from the Seatac Rental newsdesk.</p>
@@ -151,6 +154,34 @@
       <div class="setac-primary-button w-[50%] text-center mt-5 p-5 ">GO TO BLOG</div>
     </div>
   </div>
+
+
+
+<!-- ai -->
+<!-- <div class="journey min-h-screen py-16 md:py-24 lg:py-32 px-6 md:px-20 lg:px-40 flex flex-col lg:flex-row items-center gap-10 lg:gap-[50px]">
+  <div class="journey w-full md:w-[65%]">
+    <img src="/assets/journeyCar.png" alt="journeycar" class="w-full h-auto">
+  </div>
+  <div class="missiontext flex flex-col w-full md:w-[35%] justify-center text-center lg:text-left h-full uppercase gap-1.5">
+    <div class="font-seatac font-normal text-xl md:text-2xl lg:text-[27px]">Follow</div>
+    <div class="text-emerald-600 font-seatac text-2xl md:text-4xl lg:text-[42px] font-bold leading-tight">
+      along on the journey
+    </div>
+    <div>
+      <p class="text-[#696969] lowercase text-sm md:text-base">
+        Cruise the Seatac Rental blog for drool-worthy cars, chronicles of adventures from the road, and
+        the latest from the Seatac Rental newsdesk.
+      </p>
+    </div>
+    <div class="setac-primary-button w-3/4 md:w-1/2 text-center mt-5 p-4 md:p-5 mx-auto lg:mx-0">GO TO BLOG</div>
+  </div>
+</div> -->
+
+
+
+<!-- ai -->
+
+
 
 <!-- footer  -->
 
@@ -175,7 +206,7 @@
         <li> Blog </li>
       </ul>
     </div>
-    <div class="bg-slate-500 w-[2px]"></div>
+    <div class="bg-slate-500 w-[1px]"></div>
     <div class=" flex-[30%]  px-10">
       <h2 class="text-start text-[20px] font-medium uppercase pb-3">Contact Now</h2>
       <div class="text-[14px]">Address:Mauris ultricies tincidunt
