Approve the changes done by sachin

--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<body class="bg-[#F5F5F5]">
-  <div class="w-full absolute h-20 z-50" id="header"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/main.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle"
+    />
+    <title>CarRentalWebsite</title>
+  </head>
+  <body class="bg-[#F5F5F5]">
+    <div class="w-full absolute h-20 z-50" id="header"></div>
 
     <!-- home page langing page 1 -->
     <div
@@ -154,11 +164,16 @@
           </div>
         </div>
 
-        <div class="font-seatac text-[44px] font-bold text-emerald-500 leading-[56px]">
-          ANY OCCASION </div>
-        <div class="font-seatac text-base font-normal">Donec in libero pellentesque mauris blandit aliquet in ut turpis.
-          Vestibulum ut purus at velit finibus hendrerit. Mauris venenatis, ligula vitae sollicitudin commodo, urna
-          risus luctus ligula, in congue mi dolor a tortor.
+        <div
+          class="font-seatac text-[44px] font-bold text-emerald-500 leading-[56px]"
+        >
+          ANY OCCASION
+        </div>
+        <div class="font-seatac text-base font-normal">
+          Donec in libero pellentesque mauris blandit aliquet in ut turpis.
+          Vestibulum ut purus at velit finibus hendrerit. Mauris venenatis,
+          ligula vitae sollicitudin commodo, urna risus luctus ligula, in congue
+          mi dolor a tortor.
 
           <div class="lower-heading">
             <h2>Duis rutrum pharetra mauris.</h2>
@@ -168,8 +183,6 @@
             <button>READ MORE</button>
           </div>
         </div>
-
-
 
         <div class="setac-primary-button">
           <button>READ MORE</button>
@@ -200,6 +213,5 @@
     <script src="createCustomElements.js"></script>
     <script type="module" src="/src/js/home.js"></script>
     <script type="module" src="main.js"></script>
-</body>
-
+  </body>
 </html>
