--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- home page langing page 1 -->
     <div
-      class="flex flex-col justify-center items-center bg-[url('/src/assets/homebbgfinal.png')] bg-cover bg-[57%_center] md:bg-[right_20%] px-5 pt-24 pb-8 md:px-12 lg:px-40 md:h-auto md:pb-24"
+      class="flex flex-col justify-center items-center bg-[url('/src/assets/homebbgfinal.png')] bg-cover bg-[54%_20%] md:bg-[right_20%] px-5 pt-24 pb-8 md:px-12 lg:px-40 md:h-auto md:pb-24"
     >
       <div
         class="w-full relative flex flex-col md:flex-row justify-between md:justify-end"
