--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=account_circle"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"
+    />
     <title>CarRentalWebsite</title>
   </head>
   <body class="bg-[#F5F5F5]">
@@ -16,7 +20,8 @@
 
     <!-- home page langing page 1 -->
     <div
-      class="flex flex-col justify-center items-center bg-[url('/src/assets/homebbgfinal.png')] bg-cover bg-[54%_20%] md:bg-[right_20%] px-5 pt-24 pb-8 md:px-12 lg:px-40 md:h-auto md:pb-24"
+      id="hero-section-bnr"
+      class="flex flex-col justify-center items-center bg-[url('/src/assets/homebbgfinal.png')] bg-cover bg-[54%_20%] md:bg-[right_20%] px-5 pt-24 pb-8 md:px-12 lg:px-24 xl:px-36 md:h-auto md:pb-24"
     >
       <div
         class="w-full relative flex flex-col md:flex-row justify-between md:justify-end"
@@ -52,46 +57,119 @@
           id="bnr-img"
         >
           <img
-            class="w-full object-cover scale-95 z-[19] md:translate-x-[5%]"
+            class="w-full object-cover scale-95 md:scale-[.90] z-[19] lg:-translate-x-[5%]"
             src="src/assets/home-page-main-bnr.png"
             alt=""
           />
         </div>
       </div>
       <div
-        class="w-full -translate-y-[25%] h-auto md:-translate-y-[30%] lg:w-[90%]"
+        class="w-full -translate-y-[25%] h-auto md:-translate-y-[40%] lg:-translate-y-[50%] xl:-translate-y-[56%] lg:w-[90%]"
         id="search-bar"
       ></div>
     </div>
 
-    <!-- home page langing page 1 -->
-
     <!-- browse my make -->
 
-    <div class="SectionBrowse">
-      <div class="SectionBrowseHeading">
+    <div
+      class="flex flex-col gap-4 bg-secondary py-12 px-5 md:px-12 lg:px-24 xl:px-36"
+      id="browse-by-make"
+    >
+      <div class="flex flex-col items-center">
         <div class="heading-secondary text-[#C5C5C5]">SEATAC RENT</div>
         <div class="heading-primary">BROWSE BY MAKE</div>
       </div>
-      <div class="SectionBrowseSecond grid-item">
-        <div class="volswagenheading">
-          <span>SEATAC RENT</span>
-          <h6>VOLKSWAGEN</h6>
-          <img src="src/assets/volvo.png" alt="volswagenacarcarimg" />
+      <div class="w-full" id="browse-by-make-slider">
+        <div class="h-fit py-24">
+          <div
+            class="mx-1 relative bg-[#141A1C] seatac-card outline outline-white bg-[url(/src/assets/volkswagenbg.png)] bg-cover text-white outline-[1px] pt-16 pb-36 -outline-offset-[16px]"
+          >
+            <p class="uppercase z-10 font-normal text-[14px]">Seatac Rent</p>
+            <h3 class="uppercase z-10 font-semibold text-[20px]">Volkswagen</h3>
+            <img
+              class="absolute scale-[1] bottom-0 translate-y-1/3"
+              src="src/assets/volvo.png"
+              alt=""
+            />
+          </div>
         </div>
-      </div>
-      <div class="SectionArrow">
-        <img src="src/assets/Arrrow.png" alt="arrowimg" />
+        <div class="h-fit py-24">
+          <div
+            class="mx-1 relative bg-[#141A1C] seatac-card outline outline-white bg-[url(/src/assets/porshebackground.png)] bg-cover text-white outline-[1px] pt-16 pb-36 -outline-offset-[16px]"
+          >
+            <p class="uppercase font-normal text-[14px]">Seatac Rent</p>
+            <h3 class="uppercase font-semibold text-[20px]">Porsche</h3>
+            <img
+              class="absolute scale-[1] bottom-0 translate-y-1/3"
+              src="src/assets/porsche.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="h-fit py-24">
+          <div
+            class="mx-1 relative bg-[#141A1C] seatac-card outline outline-white bg-[url(/src/assets/teslabackground.png)] bg-cover text-white outline-[1px] pt-16 pb-36 -outline-offset-[16px]"
+          >
+            <p class="uppercase font-normal text-[14px]">Seatac Rent</p>
+            <h3 class="uppercase font-semibold text-[20px]">tesla</h3>
+            <img
+              class="absolute scale-[1.2] bottom-0 translate-y-1/3"
+              src="src/assets/tesla.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="h-fit py-24">
+          <div
+            class="mx-1 relative bg-[#141A1C] seatac-card outline outline-white bg-[url(/src/assets/volkswagenbg.png)] bg-cover text-white outline-[1px] pt-16 pb-36 -outline-offset-[16px]"
+          >
+            <p class="uppercase z-10 font-normal text-[14px]">Seatac Rent</p>
+            <h3 class="uppercase z-10 font-semibold text-[20px]">Volkswagen</h3>
+            <img
+              class="absolute scale-[1] bottom-0 translate-y-1/3"
+              src="src/assets/volvo.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="h-fit py-24">
+          <div
+            class="mx-1 relative bg-[#141A1C] seatac-card outline outline-white bg-[url(/src/assets/porshebackground.png)] bg-cover text-white outline-[1px] pt-16 pb-36 -outline-offset-[16px]"
+          >
+            <p class="uppercase font-normal text-[14px]">Seatac Rent</p>
+            <h3 class="uppercase font-semibold text-[20px]">Porsche</h3>
+            <img
+              class="absolute scale-[1] bottom-0 translate-y-1/3"
+              src="src/assets/porsche.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="h-fit py-24">
+          <div
+            class="mx-1 relative bg-[#141A1C] seatac-card outline outline-white bg-[url(/src/assets/teslabackground.png)] bg-cover text-white outline-[1px] pt-16 pb-36 -outline-offset-[16px]"
+          >
+            <p class="uppercase font-normal text-[14px]">Seatac Rent</p>
+            <h3 class="uppercase font-semibold text-[20px]">tesla</h3>
+            <img
+              class="absolute scale-[1.2] bottom-0 translate-y-1/3"
+              src="src/assets/tesla.png"
+              alt=""
+            />
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="px-5 lg:px-40 flex flex-col gap-4 pb-8 pt-20">
+    <div
+      class="px-5 md:px-12 lg:px-24 xl:px-36 flex flex-col md:flex-row gap-2 pt-20"
+    >
       <seatac-img-behind-car
-        class="w-full outline md:w-3/5 my-20"
+        class="w-full md:w-3/5 my-20"
         id="design-car-rental"
       ></seatac-img-behind-car>
 
-      <div class="w-2/5 my-20 flex flex-col gap-2 justify-center">
+      <div class="w-full md:w-2/5 md:my-20 flex flex-col gap-2 justify-center">
         <div class="">
           <span class="heading-secondary">RENT CARS FOR </span>
           <h2 class="heading-primary">ANY OCCASION</h2>
@@ -112,43 +190,63 @@
       </div>
     </div>
 
-    <div class="Destination">
-      <div class="destinationHeading">
-        <span>BROWSE BY</span>
-        <h2>DESTINATION</h2>
+    <div
+      class="flex py-12 px-5 md:px-12 lg:px-24 xl:px-36 flex-col items-center gap-8"
+    >
+      <div class="flex flex-col items-center">
+        <span class="heading-secondary">BROWSE BY</span>
+        <h2 class="heading-primary">DESTINATION</h2>
       </div>
 
-      <div class="CircleDestination">
-        <div class="CircleDestinationFirst">
-          <img src="src/assets/destinationOne.png.jpeg" alt="" />
-          <span>Seatac rent</span>
-          <h4>Bristol</h4>
+      <div
+        class="flex flex-wrap w-full justify-center items-center gap-x-16 md:flex-row"
+      >
+        <div class="flex flex-col items-center gap-6">
+          <img
+            src="src/assets/bristol.png"
+            class="w-40 md:w-56 rounded-full outline outline-gray-700 outline-[2px] outline-offset-[12px] aspect-square"
+            alt=""
+          />
+          <div class="flex flex-col items-center">
+            <span>Seatac rent</span>
+            <h4>Bristol</h4>
+          </div>
         </div>
-        <div class="CircleDestinationSecond">
-          <img src="src/assets/destinationSecond.png.jpeg" alt="" />
-          <span>Seatac rent</span>
-          <h4>Los Angeles</h4>
+        <div class="flex flex-col items-center gap-6">
+          <img
+            src="src/assets/los-angeles.png"
+            class="w-40 md:w-56 lg:w-full rounded-full outline outline-gray-700 outline-[2px] outline-offset-[12px] aspect-square"
+            alt=""
+          />
+          <div class="flex flex-col items-center">
+            <span>Seatac rent</span>
+            <h4>Los Angeles</h4>
+          </div>
         </div>
-
-        <div class="CircleDestinationThrid">
-          <img src="src/assets/destinationthree.png.jpeg" alt="" />
-          <span>Seatac rent</span>
-          <h4>Las Vegas</h4>
+        <div class="flex flex-col items-center gap-6">
+          <img
+            src="src/assets/las-vegas.png"
+            class="w-40 md:w-56 rounded-full outline outline-gray-700 outline-[2px] outline-offset-[12px] aspect-square"
+          />
+          <div class="flex flex-col items-center">
+            <span>Seatac rent</span>
+            <h4>Las Vegas</h4>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="daydreams-section">
-      <div>
-        <div class="top-para">
-          <p>Seatac rent</p>
-        </div>
-        <div class="heading-top">
-          <h2 class="text-6xl font-bold">Fuel your daydreams</h2>
-        </div>
+    <div
+      class="relative flex flex-col bg-secondary pt-12 pb-48 px-5 md:px-12 lg:px-24 xl:px-36 gap-8"
+      id="daydreams-section"
+    >
+      <div class="flex flex-col justify-center items-center">
+        <p class="heading-secondary uppercase text-white">Seatac rent</p>
+        <h2 class="heading-primary uppercase">Fuel your daydreams</h2>
       </div>
-      <div class="three-images">
-        <div class="daydream-section-card">
+
+      <div class="flex flex-row relative gap-8">
+        <div class="flex flex-col">
           <img src="src/assets/image0.png" alt="" />
 
           <div class="small-text">
@@ -163,17 +261,12 @@
             <button>READ MORE</button>
           </div>
         </div>
+        <div class="flex flex-col">
+          <img src="src/assets/image0.png" alt="" />
 
-        <div
-          class="font-seatac text-[44px] font-bold text-emerald-500 leading-[56px]"
-        >
-          ANY OCCASION
-        </div>
-        <div class="font-seatac text-base font-normal">
-          Donec in libero pellentesque mauris blandit aliquet in ut turpis.
-          Vestibulum ut purus at velit finibus hendrerit. Mauris venenatis,
-          ligula vitae sollicitudin commodo, urna risus luctus ligula, in congue
-          mi dolor a tortor.
+          <div class="small-text">
+            <p>Featured blog</p>
+          </div>
 
           <div class="lower-heading">
             <h2>Duis rutrum pharetra mauris.</h2>
@@ -183,24 +276,30 @@
             <button>READ MORE</button>
           </div>
         </div>
+        <div class="flex flex-col">
+          <img src="src/assets/image0.png" alt="" />
 
-        <div class="setac-primary-button">
-          <button>READ MORE</button>
+          <div class="small-text">
+            <p>Featured blog</p>
+          </div>
+
+          <div class="lower-heading">
+            <h2>Duis rutrum pharetra mauris.</h2>
+          </div>
+
+          <div class="setac-primary-button">READ MORE</div>
         </div>
       </div>
-      <div class="daydream-section-car-display">
-        <img src="src/assets/sport_car_107_15701 1.png" alt="" />
+
+      <div class="w-full absolute flex justify-center left-0 -bottom-1/2">
+        <img class="" src="src/assets/sport-car-home.png" alt="" />
       </div>
     </div>
 
-    <div class="section-5">
-      <div class="recent-rental-reviews">
-        <div class="top-para">
-          <p>Seatac rent</p>
-        </div>
-        <div class="heading-top">
-          <h2 class="text-6xl font-bold">recent rental reviews</h2>
-        </div>
+    <div class="section-5 py-12">
+      <div class="flex flex-col items-center justify-center">
+        <div class="heading-secondary uppercase">Seatac rent</div>
+        <h2 class="heading-primary uppercase">recent rental reviews</h2>
       </div>
       <div class="review"><img src="src/assets/dfdf 1.png" alt="" /></div>
       <div class="partners-logo">
@@ -212,6 +311,7 @@
 
     <script src="createCustomElements.js"></script>
     <script type="module" src="/src/js/home.js"></script>
+    <script type="module" src="/src/js/home-slider.js"></script>
     <script type="module" src="main.js"></script>
   </body>
 </html>
