--- a/src/about/index.html
+++ b/src/about/index.html
@@ -1,161 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../main.css" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../../main.css">
-  <title>Document</title>
-</head>
+  <body>
+    <div id="header"></div>
 
-<body>
-  <div id="header"></div>
-  
-  <div class="flex  px-40  py-24">
-    <seatac-img-behind-car class="w-3/5 " id="design-seatac"></seatac-img-behind-car>
-    <div class="w-2/5  flex justify-center flex-col">
-      <div class="flex text-black-500 font-seatac  items-center text-3xl relative">
-        ABOUT </div>
-
-      <div class="font-seatac text-[44px] font-bold text-emerald-500 leading-[58px]">
-        SEATAC RENTAL </div>
-      <div class="font-seatac text-base font-normal text-gray-500">Donec quis arcu egestas, aliquam sem sed, pharetra
-        urna.
-        Sed venenatis erat eu nulla finibus interdum. Fusce non lectus magna. Maecenas lacus ipsum, blandit
-        vitae nunc id, fringilla tempus neque. Integer vitae velit libero. Cras euismod tempor lectus, vel tempor
-        turpis consectetur varius. Etiam faucibus metus vitae elit rutrum tempus. <BR></BR>
-
-        Proin sit amet accumsan eros. Orci varius natoque penatibus et magnis dis
-        parturient montes, nascetur ridiculus mus. In eros urna, varius in ex quis, aliquet faucibus ante.
-        Pellentesque maximus, ipsum eu varius dignissim, ex diam ullamcorper mauris, vel porttitor elit dolor id est.
-        Nullam vitae enim lorem. Integer blandit aliquet risus at aliquam. Phasellus vitae pulvinar urna.
-        Integer quis nibh elit.   </div>
-
-    </div>
-
-
-
-  </div>
-  </div>
-
-
-  <!-- find section  -->
-  <div class="relative  findSection bg-[#141A1C]">
-    <div class="find pt-14 pb-[300px] px-40 flex flex-col justify-center items-center w-full">
-      <div class="findheading font-seatac text-emerald-500 font-bold text-[42px]">FIND YOUR DRIVE </div>
-      <div class="findtext text-white font-seatac pt-4 pb-4 text-center">Seatac Rantal is the world’s largest car
-        sharing platform, where you can book the perfect car for wherever you’re going from a vibrant community of
-        trusted hosts across the US, UK, Canada, Australia, and France. Flying in from afar or looking for a car down
-        the street, searching for a rugged truck or something smooth and swanky, you can skip the rental car counter and
-        choose from an extraordinary, totally unique selection of nearby vehicles shared by local hosts. Entrepreneurs
-        can take the wheel of their futures by becoming hosts and building car sharing businesses on Seatac Rantal,
-        leveraging our established platform to scale their businesses to meet their goals.
-        <br> <br>
-
-        With an unwavering mission of putting the world’s 1.5 billion cars to better use, Seatac Rantal unlocks the
-        hidden value in idle and underutilized assets, empowering anyone to get in the driver’s seat.
-      </div>
-      <div class="findcar absolute  bottom-0 translate-y-[300px] w-full flex justify-center"><img class="scale-90"
-          src="../assets/aboutfindcar.png" alt=""></div>
-    </div>
-  </div>
-  <!-- find section  -->
-
-
-  <!-- mission section -->
-  <div class="mission pt-[200px] pb-20 pr-40 pl-40  flex gap-2">
-    <div class="missiontext flex flex-col w-[55%] justify-center">
-      <div class="font-seatac font-normal text-[27px]">COMPANY MISSION </div>
-      <div class="text-emerald-500 font-seatac text-[42px] font-bold leading-[50px]">TO PUT THE WORLD'S 1.5 BILLION CARS
-        TO BETTER USE </div>
-    </div>
-    <div class="missioncar w-[45%]">
-      <img src="../assets/aboutmissioncar.png" alt="">
-    </div>
-
-  </div>
-
-  <!-- mission section -->
-
-
-
-  <!-- dive section -->
-
-  <div
-    class="divesection h-[90vh] bg-[url('../assets/aboutdivbg.png')] flex flex-col bg-black opacity-[90%] object-contain px-40 py-20 gap-12  ">
-    <div class="heading-primary-dark text-center uppercase"> Want to dive deeper? </div>
-
-    <div class="grid  grid-cols-3 h-max -seatac justify-center items-center gap-8">
-      <div
-        class="bg-white h-full w-full flex flex-col justify-center items-center text-gray-500 rounded-t-[60px] gap-2 p-10">
-        <img class="h-[56px] w-[56px]" src="../assets/homediveteam.png" alt="">
-        <div class="text-emerald-500 font-seatac font-bold text-[20px] text-center ">MEET THE TEAM</div>
-
-        <p class="text-center"> From the executive leadership team
-          to the board of directors, get to
-          know the leadership team pioneering
-          the way to put the world’s 1.5
-          billion cars to better use.
-        </p>
-
-        <button class="setac-primary-button">MEET THE TEAM</button>
-      </div>
-      <div
-        class="bg-white h-full w-full flex flex-col justify-center items-center text-center text-gray-500 rounded-t-[60px] gap-2 p-10">
-        <img class="h-[56px] w-[56px]" src="../assets/aboutdiveteam.png" alt="">
-        <div class="text-emerald-500 font-seatac font-bold text-[20px] text-center uppercase ">Join the team </div>
-        Recognized as A Great Place to Work®,
-        Seatac Rental prides itself on creating
-        a supportive,down-to-earth, pioneering,
-        and efficient work environment.
-        <BR></BR>
-        Review open positions and come join us!
-        <button class="setac-primary-button">Join the team
-
-        </button>
-      </div>
-      <div
-        class="bg-white h-full w-full flex flex-col justify-center text-center items-center text-gray-500 rounded-t-[60px] gap-2 p-10">
-        <img class="h-[56px] w-[56px]" src="../assets/aboutdivtouch.png" alt="">
-        <div class="text-emerald-500 font-seatac font-bold text-[20px] text-center uppercase ">
-          Get in touch
+    <div class="flex px-40 py-24">
+      <seatac-img-behind-car
+        class="w-3/5"
+        id="design-seatac"
+      ></seatac-img-behind-car>
+      <div class="w-2/5 flex justify-center flex-col">
+        <div
+          class="flex text-black-500 font-seatac items-center text-3xl relative"
+        >
+          ABOUT
         </div>
-        Reach out to the Seatac Rantal newsdesk
-        for press inquiries, the Seatac
-        Rental press kit, influencer outreach,
-        nvestor relations information, and
-        any other corporate inquiries you may have.
-        <button class="setac-primary-button"> Get in touch</button>
+
+        <div
+          class="font-seatac text-[44px] font-bold text-emerald-500 leading-[58px]"
+        >
+          SEATAC RENTAL
+        </div>
+        <div class="font-seatac text-base font-normal text-gray-500">
+          Donec quis arcu egestas, aliquam sem sed, pharetra urna. Sed venenatis
+          erat eu nulla finibus interdum. Fusce non lectus magna. Maecenas lacus
+          ipsum, blandit vitae nunc id, fringilla tempus neque. Integer vitae
+          velit libero. Cras euismod tempor lectus, vel tempor turpis
+          consectetur varius. Etiam faucibus metus vitae elit rutrum tempus.
+          <br />
+
+          Proin sit amet accumsan eros. Orci varius natoque penatibus et magnis
+          dis parturient montes, nascetur ridiculus mus. In eros urna, varius in
+          ex quis, aliquet faucibus ante. Pellentesque maximus, ipsum eu varius
+          dignissim, ex diam ullamcorper mauris, vel porttitor elit dolor id
+          est. Nullam vitae enim lorem. Integer blandit aliquet risus at
+          aliquam. Phasellus vitae pulvinar urna. Integer quis nibh elit.   
+        </div>
       </div>
     </div>
-  </div>
 
-  <!--dive section  -->
+    <!-- find section  -->
+    <div class="relative findSection bg-[#141A1C]">
+      <div
+        class="find pt-14 pb-[300px] px-40 flex flex-col justify-center items-center w-full"
+      >
+        <div
+          class="findheading font-seatac text-emerald-500 font-bold text-[42px]"
+        >
+          FIND YOUR DRIVE
+        </div>
+        <div class="findtext text-white font-seatac pt-4 pb-4 text-center">
+          Seatac Rantal is the world’s largest car sharing platform, where you
+          can book the perfect car for wherever you’re going from a vibrant
+          community of trusted hosts across the US, UK, Canada, Australia, and
+          France. Flying in from afar or looking for a car down the street,
+          searching for a rugged truck or something smooth and swanky, you can
+          skip the rental car counter and choose from an extraordinary, totally
+          unique selection of nearby vehicles shared by local hosts.
+          Entrepreneurs can take the wheel of their futures by becoming hosts
+          and building car sharing businesses on Seatac Rantal, leveraging our
+          established platform to scale their businesses to meet their goals.
+          <br />
+          <br />
 
-  <!-- journey section -->
-
-  <div class="journey h-[85vh] py-32 px-40 flex items-center gap-[50px]">
-    <div class="journey  w-[65%]">
-      <img src="../assets/journeyCar.png" alt="journeycar">
-    </div>
-    <div class="missiontext flex flex-col w-[35%] justify-center h-full uppercase gap-1.5 ">
-      <div class="font-seatac font-normal text-[27px]">Follow </div>
-      <div class="text-emerald-500 font-seatac text-[42px] font-bold leading-[50px]">along on the journey </div>
-      <div>
-        <p class="text-[#696969] lowercase ">
-          Cruise the Seatac Rantal blog for drool-worthy
-          cars,chronicles of adventures from the road, and
-          the latest from the Seatac Rental newsdesk.</p>
+          With an unwavering mission of putting the world’s 1.5 billion cars to
+          better use, Seatac Rantal unlocks the hidden value in idle and
+          underutilized assets, empowering anyone to get in the driver’s seat.
+        </div>
+        <div
+          class="findcar absolute bottom-0 translate-y-[300px] w-full flex justify-center"
+        >
+          <img class="scale-90" src="../assets/aboutfindcar.png" alt="" />
+        </div>
       </div>
-      <div class="setac-primary-button w-[50%] text-center mt-5 p-5 ">GO TO BLOG</div>
     </div>
-  </div>
-  <div id="footer"></div>  
-  <script type="module" src="../js/about.js"></script>
-  <script type="module" src="../../main.js">
-    
-  </script>
+    <!-- find section  -->
 
-</body>
+    <!-- mission section -->
+    <div class="mission pt-[200px] pb-20 pr-40 pl-40 flex gap-2">
+      <div class="missiontext flex flex-col w-[55%] justify-center">
+        <div class="font-seatac font-normal text-[27px]">COMPANY MISSION</div>
+        <div
+          class="text-emerald-500 font-seatac text-[42px] font-bold leading-[50px]"
+        >
+          TO PUT THE WORLD'S 1.5 BILLION CARS TO BETTER USE
+        </div>
+      </div>
+      <div class="missioncar w-[45%]">
+        <img src="../assets/aboutmissioncar.png" alt="" />
+      </div>
+    </div>
 
+    <!-- mission section -->
+
+    <!-- dive section -->
+
+    <div
+      class="divesection h-[90vh] bg-[url('../assets/aboutdivbg.png')] flex flex-col bg-black opacity-[90%] object-contain px-40 py-20 gap-12"
+    >
+      <div class="heading-primary-dark text-center uppercase">
+        Want to dive deeper?
+      </div>
+
+      <div
+        class="grid grid-cols-3 h-max -seatac justify-center items-center gap-8"
+      >
+        <div
+          class="bg-white h-full w-full flex flex-col justify-center items-center text-gray-500 rounded-t-[60px] gap-2 p-10"
+        >
+          <img
+            class="h-[56px] w-[56px]"
+            src="../assets/homediveteam.png"
+            alt=""
+          />
+          <div
+            class="text-emerald-500 font-seatac font-bold text-[20px] text-center"
+          >
+            MEET THE TEAM
+          </div>
+
+          <p class="text-center">
+            From the executive leadership team to the board of directors, get to
+            know the leadership team pioneering the way to put the world’s 1.5
+            billion cars to better use.
+          </p>
+
+          <button class="setac-primary-button">MEET THE TEAM</button>
+        </div>
+        <div
+          class="bg-white h-full w-full flex flex-col justify-center items-center text-center text-gray-500 rounded-t-[60px] gap-2 p-10"
+        >
+          <img
+            class="h-[56px] w-[56px]"
+            src="../assets/aboutdiveteam.png"
+            alt=""
+          />
+          <div
+            class="text-emerald-500 font-seatac font-bold text-[20px] text-center uppercase"
+          >
+            Join the team
+          </div>
+          Recognized as A Great Place to Work®, Seatac Rental prides itself on
+          creating a supportive,down-to-earth, pioneering, and efficient work
+          environment.
+          <br />
+          Review open positions and come join us!
+          <div class="setac-primary-button">Join the team</div>
+        </div>
+        <div
+          class="bg-white h-full w-full flex flex-col justify-center text-center items-center text-gray-500 rounded-t-[60px] gap-2 p-10"
+        >
+          <img
+            class="h-[56px] w-[56px]"
+            src="../assets/aboutdivtouch.png"
+            alt=""
+          />
+          <div
+            class="text-emerald-500 font-seatac font-bold text-[20px] text-center uppercase"
+          >
+            Get in touch
+          </div>
+          Reach out to the Seatac Rantal newsdesk for press inquiries, the
+          Seatac Rental press kit, influencer outreach, nvestor relations
+          information, and any other corporate inquiries you may have.
+          <div class="setac-primary-button">Get in touch</div>
+        </div>
+      </div>
+    </div>
+
+    <!--dive section  -->
+
+    <!-- journey section -->
+
+    <div class="journey h-[85vh] py-32 px-40 flex items-center gap-[50px]">
+      <div class="journey w-[65%]">
+        <img src="../assets/journeyCar.png" alt="journeycar" />
+      </div>
+      <div
+        class="missiontext flex flex-col w-[35%] justify-center h-full uppercase gap-1.5"
+      >
+        <div class="font-seatac font-normal text-[27px]">Follow </div>
+        <div
+          class="text-emerald-500 font-seatac text-[42px] font-bold leading-[50px]"
+        >
+          along on the journey
+        </div>
+        <div>
+          <p class="text-[#696969] lowercase">
+            Cruise the Seatac Rantal blog for drool-worthy cars,chronicles of
+            adventures from the road, and the latest from the Seatac Rental
+            newsdesk.
+          </p>
+        </div>
+        <div class="setac-primary-button w-[50%] text-center mt-5 p-5">
+          GO TO BLOG
+        </div>
+      </div>
+    </div>
+
+    <div id="footer"></div>
+    <script type="module" src="../js/about.js"></script>
+    <script type="module" src="../../main.js"></script>
+  </body>
 </html>
