--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       </div>
 
       <div class="flex flex-row relative gap-8">
-        <div class="flex flex-col">
+        <div class="flex flex-col w-1/3 items-center">
           <img src="src/assets/image0.png" alt="" />
 
           <div class="small-text">
@@ -257,12 +257,12 @@
             <h2>Duis rutrum pharetra mauris.</h2>
           </div>
 
-          <div class="setac-primary-button">
+          <div class="setac-primary-button w-fit">
             <button>READ MORE</button>
           </div>
         </div>
-        <div class="flex flex-col">
-          <img src="src/assets/image0.png" alt="" />
+        <div class="flex flex-col w-1/3 items-center">
+          <img src="src/assets/journeyCar.png" alt="" />
 
           <div class="small-text">
             <p>Featured blog</p>
@@ -272,11 +272,11 @@
             <h2>Duis rutrum pharetra mauris.</h2>
           </div>
 
-          <div class="setac-primary-button">
+          <div class="setac-primary-button w-fit">
             <button>READ MORE</button>
           </div>
         </div>
-        <div class="flex flex-col">
+        <div class="flex flex-col w-1/3 items-center">
           <img src="src/assets/image0.png" alt="" />
 
           <div class="small-text">
@@ -287,7 +287,7 @@
             <h2>Duis rutrum pharetra mauris.</h2>
           </div>
 
-          <div class="setac-primary-button">READ MORE</div>
+          <div class="setac-primary-button w-fit">READ MORE</div>
         </div>
       </div>
 
