--- a/src/car-checkout/index.html
+++ b/src/car-checkout/index.html
@@ -265,7 +265,7 @@
       <h3>Car rental → United Kingdom → Cars rental Rainham → BMW i3 2018
       </h3>
     </div>
-
+    <div id="footer"></div>
 <script type="module" src="../../main.js">
     
 </script>
