--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- home page langing page 1 -->
     <div
       id="hero-section-bnr"
-      class="flex flex-col justify-center items-center bg-[url('/src/assets/homebbgfinal.png')] bg-cover bg-[54%_20%] md:bg-[right_20%] px-5 pt-24 pb-8 md:px-12 lg:px-24 xl:px-36 md:h-auto md:pb-24"
+      class="flex flex-col justify-center items-center bg-[url('/src/assets/homebbgfinal.png')] bg-cover bg-[54%_20%] md:bg-[70%_50%] lg:bg-center px-5 pt-24 pb-8 md:px-12 lg:px-24 xl:px-36 md:h-auto md:pb-24"
     >
       <div
         class="w-full relative flex flex-col md:flex-row justify-between md:justify-end"
@@ -30,10 +30,10 @@
           id="bnr-text"
           class="z-[29] flex flex-col justify-center md:w-2/5 md:absolute md:left-0 md:top-1/2 md:-translate-y-1/2"
         >
-          <div class="heading-secondary relative">
+          <div class="heading-secondary flex items-center relative">
             Need to Rent
             <img
-              class="hidden md:flex absolute -right-10 top-1/2 w-[80%] -translate-y-1/2 md:translate-x-[5%]"
+              class="hidden md:flex w-[60%] opacity-20"
               src="./src/assets/homefadecar.png"
               alt=""
             />
@@ -43,7 +43,7 @@
             Luxury Car? <br />
             Send A Request
           </div>
-          <div class="hidden font-poppins text-base font-normal w-3/4 md:block">
+          <div class="hidden seatac-paragraph md:block">
             Pellentesque habitant morbi tristique senectus et netus et
             malesuada.
           </div>
@@ -53,18 +53,18 @@
         </div>
 
         <div
-          class="w-full md:w-3/4 relative flex z-[11] justify-center md:translate-y-0"
+          class="w-full md:w-[70%] relative flex z-[11] justify-end md:translate-y-0"
           id="bnr-img"
         >
           <img
-            class="w-full object-cover scale-95 md:scale-[.90] z-[19] lg:-translate-x-[5%]"
+            class="w-full z-[19]"
             src="src/assets/home-page-main-bnr.png"
             alt=""
           />
         </div>
       </div>
       <div
-        class="w-full -translate-y-[25%] h-auto md:-translate-y-[40%] lg:-translate-y-[50%] xl:-translate-y-[56%] lg:w-[90%]"
+        class="w-full -translate-y-[25%] h-auto md:-translate-y-[30%] lg:-translate-y-[40%] xl:-translate-y-[56%] lg:w-[90%]"
         id="search-bar"
       ></div>
     </div>
@@ -247,7 +247,11 @@
 
       <div class="flex flex-row relative gap-8">
         <div class="flex flex-col w-1/3 items-center">
-          <img src="src/assets/image0.png" alt="" />
+          <img
+            src="src/assets/image0.png"
+            class="min-h-40 outline object-cover"
+            alt=""
+          />
 
           <div class="small-text">
             <p>Featured blog</p>
@@ -262,7 +266,11 @@
           </div>
         </div>
         <div class="flex flex-col w-1/3 items-center">
-          <img src="src/assets/journeyCar.png" alt="" />
+          <img
+            src="src/assets/journeyCar.png"
+            class="min-h-40 outline object-cover"
+            alt=""
+          />
 
           <div class="small-text">
             <p>Featured blog</p>
@@ -277,7 +285,11 @@
           </div>
         </div>
         <div class="flex flex-col w-1/3 items-center">
-          <img src="src/assets/image0.png" alt="" />
+          <img
+            src="src/assets/image0.png"
+            class="min-h-40 outline object-cover"
+            alt=""
+          />
 
           <div class="small-text">
             <p>Featured blog</p>
