--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
           id="bnr-text"
           class="z-[29] flex flex-col justify-center md:w-2/5 md:absolute md:left-0 md:top-1/2 md:-translate-y-1/2"
         >
-          <div class="heading-secondary flex items-center relative">
+          <div
+            class="heading-secondary translate-y-1/3 flex items-center relative"
+          >
             Need to Rent
             <img
               class="hidden md:flex w-[60%] opacity-20"
@@ -43,7 +45,7 @@
             Luxury Car? <br />
             Send A Request
           </div>
-          <div class="hidden seatac-paragraph md:block">
+          <div class="hidden seatac-paragraph md:block md:w-4/5">
             Pellentesque habitant morbi tristique senectus et netus et
             malesuada.
           </div>
@@ -64,7 +66,7 @@
         </div>
       </div>
       <div
-        class="w-full -translate-y-[25%] h-auto md:-translate-y-[30%] lg:-translate-y-[40%] xl:-translate-y-[56%] lg:w-[90%]"
+        class="w-full -translate-y-[25%] h-auto md:-translate-y-[30%] lg:-translate-y-[32%] xl:-translate-y-[36%] lg:w-[90%]"
         id="search-bar"
       ></div>
     </div>
