--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     </div>
 
     <div
-      class="relative flex flex-col bg-secondary pt-12 pb-48 px-5 md:px-12 lg:px-24 xl:px-36 gap-8"
+      class="relative flex flex-col bg-secondary pt-12 pb-[24%] px-5 md:px-12 lg:px-24 xl:px-36 gap-8"
       id="daydreams-section"
     >
       <div class="flex flex-col justify-center items-center">
@@ -247,11 +247,13 @@
         <h2 class="heading-primary uppercase">Fuel your daydreams</h2>
       </div>
 
-      <div class="flex flex-row relative gap-8">
-        <div class="flex flex-col w-1/3 items-center">
+      <div
+        class="flex gap-2 gap-y-4 justify-center flex-wrap items-center md:flex-row relative"
+      >
+        <div class="flex flex-col gap-2 w-[45%] md:w-[32%] items-center">
           <img
             src="src/assets/image0.png"
-            class="min-h-40 outline object-cover"
+            class="h-40 md:h-48 lg:min-h-60 object-cover object-center"
             alt=""
           />
 
@@ -267,10 +269,10 @@
             <button>READ MORE</button>
           </div>
         </div>
-        <div class="flex flex-col w-1/3 items-center">
+        <div class="flex flex-col gap-2 w-[45%] md:w-[32%] items-center">
           <img
             src="src/assets/journeyCar.png"
-            class="min-h-40 outline object-cover"
+            class="h-40 md:h-48 lg:min-h-60 object-cover object-center"
             alt=""
           />
 
@@ -286,10 +288,10 @@
             <button>READ MORE</button>
           </div>
         </div>
-        <div class="flex flex-col w-1/3 items-center">
+        <div class="flex flex-col gap-2 w-[45%] md:w-[32%] items-center">
           <img
             src="src/assets/image0.png"
-            class="min-h-40 outline object-cover"
+            class="h-40 md:h-48 lg:min-h-60 object-cover object-center"
             alt=""
           />
 
@@ -305,12 +307,14 @@
         </div>
       </div>
 
-      <div class="w-full absolute flex justify-center left-0 -bottom-1/2">
+      <div
+        class="w-full absolute flex justify-center left-0 bottom-0 translate-y-1/2 overflow"
+      >
         <img class="" src="src/assets/sport-car-home.png" alt="" />
       </div>
     </div>
 
-    <div class="section-5 py-12">
+    <div class="outline pt-24 px-5 md:px-12 md:pt-[20%] lg:px-24 xl:px-36">
       <div class="flex flex-col items-center justify-center">
         <div class="heading-secondary uppercase">Seatac rent</div>
         <h2 class="heading-primary uppercase">recent rental reviews</h2>
@@ -324,8 +328,8 @@
     <div id="footer"></div>
 
     <script src="createCustomElements.js"></script>
+    <script type="module" src="main.js"></script>
     <script type="module" src="/src/js/home.js"></script>
     <script type="module" src="/src/js/home-slider.js"></script>
-    <script type="module" src="main.js"></script>
   </body>
 </html>
