making all page responsive

--- a/src/car-checkout/index.html
+++ b/src/car-checkout/index.html
@@ -6,10 +6,25 @@
     <title>Document</title>
     <link rel="stylesheet" href="../../main.css">
     <link rel="stylesheet" href="style.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  />
 
   </head>
   <body>
     <div id="header"></div>
+    <div class="flex justify-start pt-[25px]  px-40 py-4">
+
+      <div class="flex items-center border-b border-gray-300 w-full max-w-md ">
+        <i class="fas fa-search   "></i>
+        <input 
+            type="text" 
+            placeholder="City, Airport, Address Or Hotel" 
+            class="w-full px-2 py-1 text-sm text-gray-700 focus:outline-none" 
+        />
+    </div>
+    </div>
     <div class="main">
         <div class="big-car grid-item grid-item-span">
             <img src="..\assets\Frame 1.png" alt="">
