--- a/src/car-lists/index.html
+++ b/src/car-lists/index.html
@@ -60,8 +60,80 @@
             </div>
           </div>
         </div>
-      </div>
 
+        <div class="cars-list">
+          <div class="wishlist">
+            <img src="..\assets\heart (2) 1.png" alt="" />
+          </div>
+          <div class="car-display">
+            <img src="..\assets\image (4).png" alt="" />
+          </div>
+          <div class="car-name">
+            <h2>BMW 2 Series 2019</h2>
+          </div>
+          <div class="additional-details">  
+            <div>    
+            <div class="details-grid">
+              <div class="details">
+                <p>4.97</p>
+              </div>
+              <div class="details">
+                <img src="..\assets\star (1) 8.png" alt="" />
+                <p>(91 trips)</p>
+              </div>
+              <div class="details">
+                <img src="..\assets\badge (1) 1.png" alt="" />
+                <p>All-Star Host</p>
+              </div>
+            </div>
+            <div class="location-area">
+              <img src="..\assets\pin (6) 1.png" alt="" />
+              <p>London</p>
+            </div>
+          </div>
+            <div class="price">
+              <h3>£55 £52/day</h3>
+              <p>£157 excl. taxes & fees</p>
+            </div>
+          </div>
+        </div>
+        <div class="cars-list">
+          <div class="wishlist">
+            <img src="..\assets\heart (2) 1.png" alt="" />
+          </div>
+          <div class="car-display">
+            <img src="..\assets\image (4).png" alt="" />
+          </div>
+          <div class="car-name">
+            <h2>BMW 2 Series 2019</h2>
+          </div>
+          <div class="additional-details">  
+            <div>    
+            <div class="details-grid">
+              <div class="details">
+                <p>4.97</p>
+              </div>
+              <div class="details">
+                <img src="..\assets\star (1) 8.png" alt="" />
+                <p>(91 trips)</p>
+              </div>
+              <div class="details">
+                <img src="..\assets\badge (1) 1.png" alt="" />
+                <p>All-Star Host</p>
+              </div>
+            </div>
+            <div class="location-area">
+              <img src="..\assets\pin (6) 1.png" alt="" />
+              <p>London</p>
+            </div>
+          </div>
+            <div class="price">
+              <h3>£55 £52/day</h3>
+              <p>£157 excl. taxes & fees</p>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="map-section">
         <img src="..\assets\image (5).png" alt="" />
       </div>
@@ -71,5 +143,7 @@
     </div>
 
     <script type="module" src="../../main.js"></script>
+    <script type="module" src="../js/car-lists.js">
+    </script>
   </body>
 </html>
