UI changes are made

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           maximus nunc, id laoreet neque facilisis vitae. Ut lobortis purus
           ultrices, consectetur magna vel, bibendum enim. 
         </div>
-        <div class="setac-primary-button w-fit">Explore cars</div>
+        <a href="/car-lists" class="setac-primary-button w-fit">Explore cars</a>
       </div>
     </div>
 
