--- a/src/car-lists/index.html
+++ b/src/car-lists/index.html
@@ -12,7 +12,9 @@
     <div id="searchBar"></div>
 
     <div class="filters px-5 md:px-12 lg:px-24 xl:px-36">
-      <button id="firstButton"><img src="../assets/filter 1.png" alt="" /></button>
+      <button id="firstButton">
+        <img src="../assets/filter 1.png" alt="" />
+      </button>
       <button id="Daily-price">Daily price</button>
       <button id="Vehicle-type">Vehicle type</button>
       <button id="Make">Make</button>
@@ -20,48 +22,48 @@
       <button id="Seats">Seats</button>
       <button id="Electric">Electric</button>
       <button id="Deliver-to-me">Deliver to me</button>
-      <button id="All-filters"><img src="../assets/filter 1.png" alt="" /> All filters</button>
+      <button id="All-filters">
+        <img src="../assets/filter 1.png" alt="" /> All filters
+      </button>
     </div>
     <div class="main px-5 md:px-12 lg:px-24 xl:px-36">
       <div class="cars-section">
-        <div class="cars-list">
+        <a href="/car-detail" class="cars-list">
           <div class="wishlist">
             <img src="..\assets\heart (2) 1.png" alt="" />
           </div>
           <div class="car-display">
             <img src="..\assets\image (4).png" alt="" />
           </div>
-          <div class="car-name">
-            <h2>BMW 2 Series 2019</h2>
-          </div>
-          <div class="additional-details">  
-            <div>    
-            <div class="details-grid">
-              <div class="details">
-                <p>4.97</p>
+          <div class="car-name">BMW 2 Series 2019</div>
+          <div class="additional-details">
+            <div>
+              <div class="details-grid">
+                <div class="details">
+                  <p>4.97</p>
+                </div>
+                <div class="details">
+                  <img src="..\assets\star (1) 8.png" alt="" />
+                  <p>(91 trips)</p>
+                </div>
+                <div class="details">
+                  <img src="..\assets\badge (1) 1.png" alt="" />
+                  <p>All-Star Host</p>
+                </div>
               </div>
-              <div class="details">
-                <img src="..\assets\star (1) 8.png" alt="" />
-                <p>(91 trips)</p>
-              </div>
-              <div class="details">
-                <img src="..\assets\badge (1) 1.png" alt="" />
-                <p>All-Star Host</p>
+              <div class="location-area">
+                <img src="..\assets\pin (6) 1.png" alt="" />
+                <p>London</p>
               </div>
             </div>
-            <div class="location-area">
-              <img src="..\assets\pin (6) 1.png" alt="" />
-              <p>London</p>
-            </div>
-          </div>
             <div class="price">
               <h3>£55 £52/day</h3>
               <p>£157 excl. taxes & fees</p>
             </div>
           </div>
-        </div>
+        </a>
 
-        <div class="cars-list">
+        <a href="/car-detail" class="cars-list">
           <div class="wishlist">
             <img src="..\assets\heart (2) 1.png" alt="" />
           </div>
@@ -69,35 +71,35 @@
             <img src="..\assets\image (4).png" alt="" />
           </div>
           <div class="car-name">
-            <h2>BMW 2 Series 2019</h2>
+            <h3>BMW 2 Series 2019</h3>
           </div>
-          <div class="additional-details">  
-            <div>    
-            <div class="details-grid">
-              <div class="details">
-                <p>4.97</p>
+          <div class="additional-details">
+            <div>
+              <div class="details-grid">
+                <div class="details">
+                  <p>4.97</p>
+                </div>
+                <div class="details">
+                  <img src="..\assets\star (1) 8.png" alt="" />
+                  <p>(91 trips)</p>
+                </div>
+                <div class="details">
+                  <img src="..\assets\badge (1) 1.png" alt="" />
+                  <p>All-Star Host</p>
+                </div>
               </div>
-              <div class="details">
-                <img src="..\assets\star (1) 8.png" alt="" />
-                <p>(91 trips)</p>
-              </div>
-              <div class="details">
-                <img src="..\assets\badge (1) 1.png" alt="" />
-                <p>All-Star Host</p>
+              <div class="location-area">
+                <img src="..\assets\pin (6) 1.png" alt="" />
+                <p>London</p>
               </div>
             </div>
-            <div class="location-area">
-              <img src="..\assets\pin (6) 1.png" alt="" />
-              <p>London</p>
-            </div>
-          </div>
             <div class="price">
               <h3>£55 £52/day</h3>
               <p>£157 excl. taxes & fees</p>
             </div>
           </div>
-        </div>
-        <div class="cars-list">
+        </a>
+        <a href="/car-detail" class="cars-list">
           <div class="wishlist">
             <img src="..\assets\heart (2) 1.png" alt="" />
           </div>
@@ -105,34 +107,34 @@
             <img src="..\assets\image (4).png" alt="" />
           </div>
           <div class="car-name">
-            <h2>BMW 2 Series 2019</h2>
+            <h3>BMW 2 Series 2019</h3>
           </div>
-          <div class="additional-details">  
-            <div>    
-            <div class="details-grid">
-              <div class="details">
-                <p>4.97</p>
+          <div class="additional-details">
+            <div>
+              <div class="details-grid">
+                <div class="details">
+                  <p>4.97</p>
+                </div>
+                <div class="details">
+                  <img src="..\assets\star (1) 8.png" alt="" />
+                  <p>(91 trips)</p>
+                </div>
+                <div class="details">
+                  <img src="..\assets\badge (1) 1.png" alt="" />
+                  <p>All-Star Host</p>
+                </div>
               </div>
-              <div class="details">
-                <img src="..\assets\star (1) 8.png" alt="" />
-                <p>(91 trips)</p>
-              </div>
-              <div class="details">
-                <img src="..\assets\badge (1) 1.png" alt="" />
-                <p>All-Star Host</p>
+              <div class="location-area">
+                <img src="..\assets\pin (6) 1.png" alt="" />
+                <p>London</p>
               </div>
             </div>
-            <div class="location-area">
-              <img src="..\assets\pin (6) 1.png" alt="" />
-              <p>London</p>
-            </div>
-          </div>
             <div class="price">
               <h3>£55 £52/day</h3>
               <p>£157 excl. taxes & fees</p>
             </div>
           </div>
-        </div>
+        </a>
       </div>
       <div class="map-section">
         <img src="..\assets\image (5).png" alt="" />
@@ -144,7 +146,6 @@
     <div id="footer"></div>
 
     <script type="module" src="../../main.js"></script>
-    <script type="module" src="../js/car-lists.js">
-    </script>
+    <script type="module" src="../js/car-lists.js"></script>
   </body>
 </html>
