update the project page

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </div>
 
     <div
-      class="flex py-12 px-5 md:px-12 lg:px-24 xl:px-36 flex-col items-center gap-8"
+      class="flex py-12 px-5 md:px-12 lg:px-24 xl:px-36 flex-col items-center gap-8 "
     >
       <div class="flex flex-col items-center">
         <span class="heading-secondary">BROWSE BY</span>
@@ -201,38 +201,39 @@
       </div>
 
       <div
-        class="flex flex-wrap w-full justify-center items-center gap-x-16 md:flex-row"
+        class="flex flex-wrap w-full justify-center items-center gap-y-5 gap-x-16 md:flex-row "
       >
         <div class="flex flex-col items-center gap-6">
+          
           <img
             src="src/assets/bristol.png"
-            class="w-40 md:w-56 rounded-full outline outline-gray-700 outline-[2px] outline-offset-[12px] aspect-square"
+            class="w-40 lg:w-[12rem] md:w-56 rounded-full outline outline-gray-700 outline-[2px] outline-offset-[12px] aspect-square"
             alt=""
           />
-          <div class="flex flex-col items-center">
+          <div class="flex flex-col items-center uppercase">
             <span>Seatac rent</span>
-            <h4>Bristol</h4>
+            <h4 class="text-[#22AF86] text-[1.5rem] font-bold">Bristol</h4>
           </div>
         </div>
         <div class="flex flex-col items-center gap-6">
           <img
             src="src/assets/los-angeles.png"
-            class="w-40 md:w-56 lg:w-full rounded-full outline outline-gray-700 outline-[2px] outline-offset-[12px] aspect-square"
+            class="w-40 lg:w-[12rem] md:w-56 rounded-full outline outline-gray-700 outline-[2px] outline-offset-[12px] aspect-square"
             alt=""
           />
-          <div class="flex flex-col items-center">
+          <div class="flex flex-col items-center uppercase">
             <span>Seatac rent</span>
-            <h4>Los Angeles</h4>
+            <h4 class="text-[#22AF86] text-[1.2rem] font-bold " >Los Angeles</h4>
           </div>
         </div>
-        <div class="flex flex-col items-center gap-6">
+        <div class="flex flex-col items-center gap-6 uppercase">
           <img
             src="src/assets/las-vegas.png"
-            class="w-40 md:w-56 rounded-full outline outline-gray-700 outline-[2px] outline-offset-[12px] aspect-square"
+            class="w-40 lg:w-[12rem] md:w-56 rounded-full outline outline-gray-700 outline-[2px] outline-offset-[12px] aspect-square"
           />
           <div class="flex flex-col items-center">
             <span>Seatac rent</span>
-            <h4>Las Vegas</h4>
+            <h4 class="text-[#22AF86] text-[1.2rem] font-bold ">Las Vegas</h4>
           </div>
         </div>
       </div>
@@ -244,7 +245,7 @@
     >
       <div class="flex flex-col justify-center items-center">
         <p class="heading-secondary uppercase text-white">Seatac rent</p>
-        <h2 class="heading-primary uppercase">Fuel your daydreams</h2>
+        <h2 class="heading-primary uppercase text-center">Fuel your daydreams</h2>
       </div>
 
       <div
@@ -317,7 +318,7 @@
     <div class="outline pt-24 px-5 md:px-12 md:pt-[20%] lg:px-24 xl:px-36">
       <div class="flex flex-col items-center justify-center">
         <div class="heading-secondary uppercase">Seatac rent</div>
-        <h2 class="heading-primary uppercase">recent rental reviews</h2>
+        <h2 class="heading-primary uppercase text-center">recent rental reviews</h2>
       </div>
       <div class="review"><img src="src/assets/dfdf 1.png" alt="" /></div>
       <div class="partners-logo">
