--- a/src/booked-a-car/index.html
+++ b/src/booked-a-car/index.html
@@ -33,24 +33,24 @@
       </div>
 
       <div
-        class="flex justify-between py-5 items-center border-t-[1.5px] border-b-[1.5px] border-gray-200"
+        class="flex justify-between py-5 flex-col  sm:flex-row items-center border-t-[1.5px] border-b-[1.5px] border-gray-200"
       >
-        <h2 class="font-seatac text-[32px] font-bold">Booked Trip</h2>
+        <h2 class="font-seatac text-[2rem] font-bold">Booked Trip</h2>
 
-        <div class="flex justify-center gap-2 items-center">
-          <div class="flex flex-col gap-[2px]">
-            <span class="font-seatac text-[14px] text-[#666666] text-end"
+        <div class="flex flex-col-reverse justify-center gap-2 items-center md:flex-row">
+          <div class="flex flex-col gap-[2px] ">
+            <span class="font-seatac text-[0.8rem] text-[#666666] text-end"
               >MG ZS SUV 2020</span
             >
             <span
-              class="font-seatac text-[14px] text-[#22AF86] font-bold uppercase"
+              class="font-seatac text-[0.8rem] text-[#22AF86] font-bold uppercase"
               >View car details</span
             >
           </div>
           <img
             src="../assets/bookedpageimg.png"
             alt="carimage"
-            class="rounded object-cover"
+            class="rounded-[0.8rem] object-cover w-36 h-20"
           />
         </div>
       </div>
