--- a/src/car-checkout/index.html
+++ b/src/car-checkout/index.html
@@ -43,7 +43,7 @@
 
     <div class="main second-section">
             
-        <div class=" grid-item left-section grid-item-span">
+        <div class=" grid-item left-section grid-item-span md:pt-32 lg:pt-0">
            <h2 class="heading">BMW I3 2018</h2>
            <p>EXTENDED RANGE</p>
           <div class="grid-main">
