--- a/src/car-detail/index.html
+++ b/src/car-detail/index.html
@@ -32,7 +32,7 @@
     
     </div>
 
-    <div class="main second-section">
+    <div class="main second-section md:pt-32 lg:pt-0 ">
             
         <div class=" grid-item left-section grid-item-span">
            <h2 class="heading">BMW 2 Series 2019</h2>
